# singflow-ai

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: .env.example  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/versions/: 20260602_0001_create_phase_2_core_tables.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  errors.py
apps/api/app/api/routes/: agent_runs.py  dashboard.py  feedback.py  health.py  karaoke_sessions.py  playlists.py  songs.py  users.py
apps/api/app/api/v1/: __init__.py  (+1 more)
apps/api/app/cache/: __init__.py
apps/api/app/core/: config.py  errors.py  pagination.py  safety.py
apps/api/app/data/: __init__.py  demo_sessions.py  demo_songs.py  demo_users.py
apps/api/app/db/: models.py
apps/api/app/repositories/: __init__.py  agent_runs_repository.py  dashboard_repository.py  feedback_repository.py  karaoke_sessions_repository.py  playlists_repository.py  songs_repository.py  taste_profiles_repository.py  users_repository.py
apps/api/app/schemas/: __init__.py  agent_runs.py  common.py  dashboard.py  feedback.py  karaoke_sessions.py  playlists.py  songs.py  taste_profiles.py  users.py
apps/api/app/scripts/: __init__.py  bootstrap_demo_data.py
apps/api/app/services/: __init__.py  agent_run_service.py  dashboard_service.py  demo_user_service.py  feedback_memory_service.py  karaoke_session_service.py  playlist_mock_service.py  song_catalog_service.py  taste_fusion_service.py  taste_profile_service.py
apps/api/tests/: test_health.py
(+52 files in other folders)
